--- a/content/templates/back/login.twig
+++ b/content/templates/back/login.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block styles %}
-    <link href="/assets/back/css/login.css" rel="stylesheet">
+    <link href="/public/assets/back/css/login.css" rel="stylesheet">
 {% endblock %}
 
 {% block page_header_and_breadcrumbs %}
