--- a/content/templates/front/blocks/header.twig
+++ b/content/templates/front/blocks/header.twig
@@ -1,105 +1,36 @@
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-gray-900 shadow-sm">
+<nav class="navbar navbar-expand-lg">
     <div class="container">
-        <!-- Логотип и бренд -->
-        <a class="navbar-brand fw-bold fs-3 text-white" href="/">
+        <!-- Логотип и бренд - слева -->
+        <a class="navbar-brand" href="/">
             <i class="fi-rr-layout-fluid me-2"></i>FlatCMS
         </a>
 
-        <!-- Мобильное меню -->
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Основное меню -->
-        <div class="collapse navbar-collapse" id="navbarMain">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-white-50 hover-text-white" href="/">
-                        <i class="fi-rr-home me-1"></i>Главная
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white-50 hover-text-white" href="/articles">
-                        <i class="fi-rr-book-open me-1"></i>Статьи
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white-50 hover-text-white" href="/categories">
-                        <i class="fi-rr-folder me-1"></i>Категории
-                    </a>
-                </li>
-            </ul>
-
-            <!-- Дополнительное меню -->
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link text-white-50 hover-text-white dropdown-toggle"
-                       href="#" role="button" data-bs-toggle="dropdown">
-                        <i class="fi-rr-info me-1"></i>О проекте
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                        <li>
-                            <a class="dropdown-item" href="/about">
-                                <i class="fi-rr-user me-2"></i>О нас
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="/contact">
-                                <i class="fi-rr-envelope me-2"></i>Контакты
-                            </a>
-                        </li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li>
-                            <a class="dropdown-item" href="/calculator">
-                                <i class="fi-rr-calculator me-2"></i>Калькулятор
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="/more">
-                                <i class="fi-rr-apps me-2"></i>Дополнительно
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-
-                <!-- Поиск -->
-                <li class="nav-item">
-                    <a class="nav-link text-white-50 hover-text-white" href="/search" title="Поиск">
-                        <i class="fi-rr-search"></i>
-                    </a>
-                </li>
-            </ul>
+        <!-- Правая часть - только аватар пользователя -->
+        <div class="navbar-nav">
+            <div class="nav-item dropdown header-user-dropdown">
+                <a class="nav-link p-0" href="#" role="button" data-bs-toggle="dropdown">
+                    <img src="https://gravatar.com/avatar/4474ca42d303761c2901fa819c4f2547"
+                         alt="Аватар" class="header-user-avatar">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li>
+                        <a class="dropdown-item" href="/profile">
+                            <i class="fi-rr-user me-2"></i>Профиль
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="/settings">
+                            <i class="fi-rr-settings me-2"></i>Настройки
+                        </a>
+                    </li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <a class="dropdown-item" href="/logout">
+                            <i class="fi-rr-exit me-2"></i>Выйти
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
-
-<!-- Хлебные крошки -->
-<div class="bg-gray-100 border-bottom">
-    <div class="container">
-        <nav aria-label="breadcrumb" class="py-2">
-            <ol class="breadcrumb mb-0 small">
-                <li class="breadcrumb-item">
-                    <a href="/" class="text-gray-600 text-decoration-none">
-                        <i class="fi-rr-home me-1"></i>Главная
-                    </a>
-                </li>
-                {% if breadcrumbs %}
-                    {% for breadcrumb in breadcrumbs %}
-                        <li class="breadcrumb-item {% if loop.last %}active text-gray-800{% else %}text-gray-600{% endif %}">
-                            {% if breadcrumb.url and not loop.last %}
-                                <a href="{{ breadcrumb.url }}" class="text-decoration-none">{{ breadcrumb.title }}</a>
-                            {% else %}
-                                {{ breadcrumb.title }}
-                            {% endif %}
-                        </li>
-                    {% endfor %}
-                {% else %}
-                    <li class="breadcrumb-item active text-gray-800">
-                        {{ current_page_title|default('Страница') }}
-                    </li>
-                {% endif %}
-            </ol>
-        </nav>
-    </div>
-</div>
