--- a/content/templates/front/pages/article.twig
+++ b/content/templates/front/pages/article.twig
@@ -53,7 +53,11 @@
                     </header>
 
                     <div class="article-body">
-                        {{ article.content ?? 'Контент статьи отсутствует'|raw }}
+                        {% if article.content %}
+                            {{ article.content|raw }}
+                        {% else %}
+                            <p>Контент статьи отсутствует</p>
+                        {% endif %}
                     </div>
                 </article>
             {% else %}
